Made code more readable, fixed spacing of text next to radio bubbles, tweaked line spacing.

--- a/styles.css
+++ b/styles.css
@@ -1,92 +1,95 @@
 :root {
-    --main-bg-color: #171d1f;
-    --content-bg-color: #2a3235;
-    --main-text-color: #c2d0d4;
-    --accent-color: #3fc3f7;
+  --main-bg-color: #171d1f;
+  --content-bg-color: #2a3235;
+  --main-text-color: #c2d0d4;
+  --accent-color: #3fc3f7;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    background-color: var(--main-bg-color);
-    color: var(--main-text-color);
-    font-size: 16px;
-    font-family: sans-serif;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: var(--main-bg-color);
+  color: var(--main-text-color);
+  font-size: 16px;
+  font-family: sans-serif;
 }
 
 p {
-    margin: 1em auto;
-    text-align: center;
+  margin: 1em auto;
+  text-align: center;
 }
 
 h1 {
-    color: var(--accent-color);
-    margin: 1em auto 0 auto;
-    text-align: center;
+  color: var(--accent-color);
+  margin: 1em auto 0 auto;
+  text-align: center;
 }
 
-h1, legend {
-    font-family: serif;
+h1,
+legend {
+  font-family: serif;
 }
 
 legend {
-    font-size: 1.5rem;
-    font-weight: bold;
-    font-style: italic;
-    color: var(--accent-color);
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
+  color: var(--accent-color);
 }
 
 form {
-    width: 75vw;
-    max-width: 600px;
-    min-width: 300px;
-    margin: 0 auto;
-    padding-bottom: 2em;
+  width: 75vw;
+  max-width: 600px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
 }
 
 fieldset {
-    margin: 0 auto 20px auto;
-    background-color: var(--content-bg-color);
-    border: 3px solid var(--accent-color);
-    padding: 10px 20px;
-    box-shadow: 5px 5px 15px black;
-    border-radius: 15px;
+  margin: 0 auto 20px auto;
+  background-color: var(--content-bg-color);
+  border: 3px solid var(--accent-color);
+  padding: 10px 20px;
+  box-shadow: 5px 5px 15px black;
+  border-radius: 15px;
 }
 
 label {
-    display: block;
-    margin: 0.5rem 0;
-    line-height: 1.5em;
+  display: block;
+  margin: 0.5rem 0;
+  line-height: 1.3em;
 }
 
-input, textarea, select {
-    margin: 10px 0 0 0;
-    width: 100%;
-    min-height: 2em;
-    background-color: var(--main-bg-color);
-    border: 1px solid var(--main-bg-color);
-    font-size: 16px;
-    color: var(--main-text-color);
+input,
+textarea,
+select {
+  margin: 2px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+  background-color: var(--main-bg-color);
+  border: 1px solid var(--main-bg-color);
+  font-size: 16px;
+  color: var(--main-text-color);
 }
 
 .inline {
-    width: unset;
-    display: inline;
-    margin: 0 0.5em 0 0;
-    vertical-align: middle;
+  width: unset;
+  display: inline;
+  margin: 0 0.5em -0.25em 0;
+  vertical-align: bottom;
 }
 
 input[type="submit"] {
-    display: block;
-    width: 100%;
-    height: 2em;
-    font-size: 1.2em;
-    background-color: var(--accent-color);
-    color: var(--main-bg-color);
-    border: none;
-    min-width: 300px;
-    font-weight: bold;
-    box-shadow: 5px 5px 15px black;
-    border-radius: 15px;
+  display: block;
+  width: 100%;
+  height: 2em;
+  font-size: 1.2em;
+  background-color: var(--accent-color);
+  color: var(--main-bg-color);
+  border: none;
+  min-width: 300px;
+  font-weight: bold;
+  box-shadow: 5px 5px 15px black;
+  border-radius: 15px;
 }
